Fix default spacing and login page

--- a/templates/g5_helium/custom/scss/form.css
+++ b/templates/g5_helium/custom/scss/form.css
@@ -124,6 +124,7 @@
       font-family: var(--em-applicant-font);
       font-style: normal;
       font-weight: var(--em-form-label-weight);
+      margin-bottom: 0;
       &.fabrikTip {
         cursor: text;
       }
