--- a/templates/g5_helium/custom/scss/main.compiled.css
+++ b/templates/g5_helium/custom/scss/main.compiled.css
@@ -667,6 +667,7 @@ form.fabrikForm .fabrikLabel {
       font-family: var(--em-applicant-font);
       font-style: normal;
       font-weight: var(--em-form-label-weight);
+      margin-bottom: 0;
     }
 form.fabrikForm .fabrikLabel.fabrikTip {
         cursor: text;
