--- a/templates/g5_helium/html/com_users/login/style/com_users_login.css
+++ b/templates/g5_helium/html/com_users/login/style/com_users_login.css
@@ -175,7 +175,7 @@ form.form-validate.form-horizontal.well .control-group .controls input {
     padding: 0 12px 0 12px;
     border: 1px solid var(--em-form-bc);
     box-shadow: none;
-    margin-top: 12px;
+    margin-top: var(--em-form-label-margin-bottom);
 }
 
 form.form-validate.form-horizontal.well .control-group .controls input:focus {
